# pybind-example

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  deps.sh  setpath.sh
src/: CMakeLists.txt  __init__.py  main.cpp
src/bar/: CMakeLists.txt  bar.cpp  bar.hpp
src/bar/python/: bar_v.cpp
src/foo/: CMakeLists.txt  foo.cpp
src/foo/python/: foo_v.cpp
